Se corrige plantilla en jade

--- a/app/precom/jade/index.jade
+++ b/app/precom/jade/index.jade
@@ -22,8 +22,8 @@ html(lang=es)
 					input#email.form-control(name='email', type='email', placeholder='Ingrese su email')
 				.form-group
 					label(for='message') Mensaje
-					textarea#message.form-control(name='message', placeholder='Ingrese su mensaje' rows="3")
-				input.btn.btn-default(type='submit') Enviar
+					textarea#message.form-control(name='message', placeholder='Ingrese su mensaje' rows='3')
+				input.btn.btn-default(type='submit', value='Enviar')
 		script(src="bower_components/jquery/dist/jquery.min.js")
 		script(src="bower_components/jquery-validation/dist/jquery.validate.min.js")
 		script(src="js/script.js")
