--- a/app/precom/pug/index.pug
+++ b/app/precom/pug/index.pug
@@ -8,5 +8,5 @@ html(lang=es)
 		link(rel="stylesheet",href="css/style.css")
 	body
 		.container
-			h1 Skeletor!
+			h1 Skeletor :D
 		script(src="js/script.js")
